fix closing tags

--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
     -->
     <title>Admin Area | Users</title>
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <script src="http://cdn.ckeditor.com/4.6.1/standard/ckeditor.js"></script>
+    <link href="./css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="./css/style.css" rel="stylesheet"/>
+    <!--<script src="http://cdn.ckeditor.com/4.6.1/standard/ckeditor.js"></script>-->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -42,14 +42,14 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <script>
-        CKEDITOR.replace( 'editor1' );
-    </script>
+    <!--<script>-->
+        <!--CKEDITOR.replace( 'editor1' );-->
+    <!--</script>-->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
   </body>
 </html>
